--- a/Brandlogs/LandingPage/landingPage.css
+++ b/Brandlogs/LandingPage/landingPage.css
@@ -1,8 +1,7 @@
-
 /* CSS for the hover animation (optional) */
 .icon-container:hover svg {
-    transform: scale(1.1); /* Scale the icon up by 10% on hover */
-    transition: transform 0.2s ease; /* Smooth transition */
+  transform: scale(1.1); /* Scale the icon up by 10% on hover */
+  transition: transform 0.2s ease; /* Smooth transition */
 }
 .nav-link:hover {
   color: orange; /* Change text color on hover */
@@ -24,18 +23,17 @@
   transform: scaleX(1); /* Show underline on hover */
 }
 
-.navbar-toggler-icon{
+.navbar-toggler-icon {
   background: white;
 }
 
 #navbar-toggler {
-background-color: #fff;
+  background-color: #fff;
 }
-
 
 .cta {
   padding: 15px 30px 15px 30px;
-  background-color: #DB2127;
+  background-color: #db2127;
   outline: none;
   color: white;
   border: 0;
@@ -52,7 +50,7 @@ background-color: #fff;
   border-radius: 5px;
 }
 
-.text-cta-caption{
+.text-cta-caption {
   margin-top: 20px;
   font-size: 18px;
 }
@@ -66,13 +64,13 @@ background-color: #fff;
   transform: scale(1.05); /* Scale up by 5% on hover */
 }
 
-.btn-block{
+.btn-block {
   box-shadow: 4px 6px 3px rgba(0, 0, 0, 0.336);
 }
 
-.about-card-head{
+.about-card-head {
   border-radius: 10px;
-  background-color: #F7A01C;
+  background-color: #f7a01c;
 }
 
 /*--------------------------------------------------------------
@@ -87,7 +85,7 @@ background-color: #fff;
   list-style: none;
 }
 
-.faq .faq-list li+li {
+.faq .faq-list li + li {
   margin-top: 15px;
 }
 
@@ -128,7 +126,7 @@ background-color: #fff;
   position: absolute;
   right: 0;
   left: 20px;
-  color: #F7A01C;
+  color: #f7a01c;
 }
 
 .faq .faq-list .icon-show,
@@ -149,7 +147,7 @@ background-color: #fff;
 }
 
 .faq .faq-list a.collapsed {
-  color: #3783B4;
+  color: #3783b4;
   transition: 0.3s;
 }
 
@@ -171,13 +169,12 @@ background-color: #fff;
   }
 }
 
-.footer-links div a{
+.footer-links div a {
   color: white;
 }
 
-.footer-links div a:hover{
-  color: #F7A01C;
-
+.footer-links div a:hover {
+  color: #f7a01c;
 }
 
 /* Our Stories */
@@ -196,7 +193,7 @@ background-color: #fff;
 }
 .fostrap-logo {
   width: 100px;
-  margin-bottom:15px
+  margin-bottom: 15px;
 }
 h1.heading {
   color: #fff;
@@ -220,28 +217,28 @@ h1.heading {
     font-size: 3.25em;
     margin: 0 0 0.3em;
   }
-} 
+}
 
 .img-card {
   width: 100%;
-  height:200px;
-  border-top-left-radius:2px;
-  border-top-right-radius:2px;
-  display:block;
-    overflow: hidden;
+  height: 200px;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+  display: block;
+  overflow: hidden;
 }
-.img-card img{
+.img-card img {
   width: 100%;
   height: 200px;
-  object-fit:cover; 
-  transition: all .25s ease;
-} 
+  object-fit: cover;
+  transition: all 0.25s ease;
+}
 .card-content {
-  padding:15px;
-  text-align:left;
+  padding: 15px;
+  text-align: left;
 }
 .card-title {
-  margin-top:0px;
+  margin-top: 0px;
   font-weight: 700;
   font-size: 1.65em;
 }
@@ -250,13 +247,13 @@ h1.heading {
   text-decoration: none !important;
 }
 .card-read-more {
-  border-top: 1px solid #D4D4D4;
+  border-top: 1px solid #d4d4d4;
 }
 .card-read-more a {
   text-decoration: none !important;
-  padding:10px;
-  font-weight:600;
-  text-transform: uppercase
+  padding: 10px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 /* Gallery */
@@ -270,7 +267,7 @@ h1.heading {
 .gallery-image img {
   height: 250px;
   width: 350px;
-  transform: scale(1.0);
+  transform: scale(1);
   transition: transform 0.4s ease;
 }
 
@@ -290,31 +287,31 @@ h1.heading {
   position: absolute;
   bottom: 5px;
   left: 20px;
-  opacity: 0.0;
+  opacity: 0;
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 .transparent-box {
   height: 250px;
   width: 350px;
-  background-color:rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
   position: absolute;
   top: 0;
   left: 0;
   transition: background-color 0.3s ease;
 }
 
-.img-box:hover img { 
+.img-box:hover img {
   transform: scale(1.1);
 }
 
 .img-box:hover .transparent-box {
-  background-color:rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .img-box:hover .caption {
   transform: translateY(-20px);
-  opacity: 1.0;
+  opacity: 1;
 }
 
 .img-box:hover {
@@ -329,20 +326,44 @@ h1.heading {
   opacity: 0.5;
 }
 
-.modal-cta{
+.modal-cta {
   padding: 10px 20px;
-  background-color: #1C9346;
+  background-color: #1c9346;
   color: white;
   outline: none;
   border: none;
   border-radius: 5px;
 }
 
-.modal-cta:hover{
+.modal-cta:hover {
   padding: 10px 20px;
   background-color: #1c9346be;
   color: white;
   outline: none;
   border: none;
   border-radius: 5px;
+}
+
+.cta {
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  background: #db2127;
+  color: white;
+  font-size: large;
+  margin: 2px;
+  width: 200px;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 900px) {
+  div .cta {
+    padding: 12px 20px;
+    border: none;
+    outline: none;
+    background: #db2127;
+    color: white;
+    width: 200px;
+    margin: 20px 0px;
+  }
 }
