--- a/Brandlogs/BrandlogsForms/login.css
+++ b/Brandlogs/BrandlogsForms/login.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-form {
+.form {
   background-color: #3984b26b;
   width: 560px;
 }
@@ -25,7 +25,7 @@ button {
   margin: auto;
   vertical-align: middle;
   border: 1px solid #e5dfe4;
-  background-color: #fff;
+  background-color: #f9f9f9;
   border-radius: 50%;
 }
 
